src/test/deca/syntax/valid/added/if.deca
// Description:
//    Programme testant un if simple.
//
// Resultats:
//    sortrie : correct
//
// Historique:
//    cree le 07/01/2024
{
       if (true){
         println("correct");
       }
}
